--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "moment": "^2.24.0",
         "morgan": "^1.10.0",
         "multer": "^1.4.2",
+        "mysql": "^2.18.1",
         "pg": "^8.0.0",
         "prettier": "^2.0.4",
         "sqlite3": "^4.1.1"
