--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js"
+        "start": "nodemon index.js",
+        "test": "jest"
+    },
+    "jest": {
+        "testEnvironment": "node",
+        "coveragePathIgnorePatterns": [
+            "/node_modules/"
+        ]
     },
     "keywords": [],
     "author": "",
@@ -37,6 +44,8 @@
         "eslint": "^6.8.0",
         "eslint-config-airbnb-base": "^14.1.0",
         "eslint-plugin-import": "^2.20.2",
-        "nodemon": "^2.0.2"
+        "jest": "^26.0.1",
+        "nodemon": "^2.0.2",
+        "supertest": "^4.0.2"
     }
 }
